# segregated_storage

./: CMakeLists.txt  LICENSE  README.md  object_pool.h
.github/workflows/: cmake-multi-platform.yml  linux.yml  macos.yml  test.yml  test_linux.yml  test_macos.yml  test_windows.yml  windows.yml
examples/: CMakeLists.txt
examples/src/: main.cpp
include/object_pool/: object_pool.h
include/segregated_storage/: raw_segregated_storage.h  segregated_multi_storage.h  segregated_storage.h
object_pool/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: main.cpp  memory_helper.h  object_pool.cpp  segregated_multi_storage.cpp  segregated_storage.cpp  test_class.h
